--- a/spring-boot-thymeleaf/src/main/resources/templates/index.html
+++ b/spring-boot-thymeleaf/src/main/resources/templates/index.html
@@ -2,9 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1" />
+<link rel="stylesheet" th:href="@{/css/style.css}"></link>
 <title th:text="${mensaje}">Insert title here</title>
+
 </head>
 <body>
 	<h1 th:text="${mensaje}"></h1>
+	<h2 th:text="${mensaje}"></h2>
+	
+	<img alt="" th:src="@{/images/logo.png}"></img>
 </body>
 </html>
