--- a/jpa/spring-boot-jpa-/src/main/resources/templates/index.html
+++ b/jpa/spring-boot-jpa-/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <title>index</title>
 </head>
 <body>
