--- a/jpa/spring-boot-jpa-/src/main/resources/templates/form.html
+++ b/jpa/spring-boot-jpa-/src/main/resources/templates/form.html
@@ -41,30 +41,61 @@ li a:hover {
 	</ul>
 
 
-	<h1 th:text="${titulo}"></h1>
+
 
 	<div class="container">
-		<form th:action="@{/form}" th:object="${cliente}" method="post">
-			<table>
+		<h1 th:text="${titulo}"></h1>
 
-				<tr>
-					<td>Nombre</td>
-					<td><input type="text" th:field="*{nombre}" class="form-control" /></td>
-				</tr>
-				<tr>
-					<td>Apellido</td>
-					<td><input type="text" th:field="*{apellido}" class="form-control" /></td>
-				</tr>
-				<tr>
-					<td>Email</td>
-					<td><input type="email" th:field="*{email}" class="form-control" /></td>
-				</tr>
-				<tr>
-					<td><input type="submit" value="Crear Cliente" class="btn btn-primary" /></td>
-				</tr>
-			</table>
+
+		<div th:object="${cliente}" th:remove="tag" >
+			<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger" role="alert" >
+				<li th:each="err : ${#fields.errors('*')}" th:text="${err}" ></li>
+			</ul>
+		</div>
+
+		<form th:action="@{/form}" th:object="${cliente}" method="post">
+
+			<div class="form-group">
+				<label class="col-sm-2 col-form-label">Nombre</label> <input
+					type="text" th:field="*{nombre}" class="form-control"
+					th:errorclass="'form-control alert-danger'" /> <small
+					class="form-text text-danger"
+					th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
+			</div>
+
+			<div class="form-group">
+				<label class="col-sm-2 col-form-label">Apellido</label> <input
+					type="text" th:field="*{apellido}" class="form-control"
+					th:errorclass="'form-control alert-danger'" /> <small
+					class="form-text text-danger"
+					th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
+			</div>
+
+			<div class="form-group">
+				<label class="col-sm-2 col-form-label">Email</label> <input
+					type="text" th:field="*{email}" class="form-control"
+					th:errorclass="'form-control alert-danger'" /> <small
+					class="form-text text-danger" th:if="${#fields.hasErrors('email')}"
+					th:errors="*{email}"></small>
+			</div>
+
+			<div class="form-group">
+				<label class="col-sm-2 col-form-label">fecha</label> <input
+					type="text" th:field="*{createAt}" class="form-control"
+					th:errorclass="'form-control alert-danger'" /> <small
+					class="form-text text-danger"
+					th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
+			</div>
+
+
+			<div class="form-group">
+				<input type="submit" value="Crear Cliente" class="btn btn-primary" />
+			</div>
+
 			<input type="hidden" th:field="*{id}" />
+
 		</form>
+
 	</div>
 </body>
 </html>
