--- a/jpa/spring-boot-jpa-/src/main/resources/templates/form.html
+++ b/jpa/spring-boot-jpa-/src/main/resources/templates/form.html
@@ -1,47 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<style type="text/css">
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #333;
-}
-
-li {
-	float: left;
-}
-
-li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-}
-
-li a:hover {
-	background-color: #111;
-}
-</style>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<title th:text="${titulo}"></title>
-</head>
+<head th:replace="layout/layout :: head"></head>
 <body>
 
-	<ul>
-		<li><a class="active" href="#home">Home</a></li>
-		<li><a th:href="@{/listar}">Cliente</a></li>
-		<li><a>C</a></li>
-		<li><a href="#about">A</a></li>
-	</ul>
-
-
-
+<header th:replace="layout/layout :: header"></header>
 
 	<div class="container">
 		<h1 th:text="${titulo}"></h1>
@@ -95,5 +57,7 @@ li a:hover {
 		</form>
 
 	</div>
+	
+	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
