--- a/jpa/spring-boot-jpa-/src/main/resources/templates/listar.html
+++ b/jpa/spring-boot-jpa-/src/main/resources/templates/listar.html
@@ -1,74 +1,55 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<style type="text/css">
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #111;
-}
-</style>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<title th:text="${titulo}"></title>
-</head>
+<head th:replace="layout/layout :: head"></head>
 <body>
 
-	<ul>
-		<li><a class="active" href="#home">Home</a></li>
-		<li><a th:href="@{/listar}" >Cliente</a></li>
-		<li><a >C</a></li>
-		<li><a href="#about">A</a></li>
-	</ul>
+	<header th:replace="layout/layout :: header"></header>
 
 	<div class="container">
-		<h1 class="border" th:text="${titulo}"></h1>
 
-		<a th:href="@{/form}" > crear cliente  </a>
+		<div class="card">
 
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Nombre</th>
-					<th>Apellido</th>
-					<th>Email</th>
-					<th>Fecha</th>
-					<th>Editar</th>
-					<th>Eliminar</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="cliente: ${clientes}">
-					<td th:text="${cliente.id}"></td>
-					<td th:text="${cliente.nombre}"></td>
-					<td th:text="${cliente.apellido}"></td>
-					<td th:text="${cliente.email}"></td>
-					<td th:text="${cliente.createAt}"></td>
-					<td><a class="btn btn-primary btn-xs"  th:href="@{/form/}+${cliente.id}" >editar</a></td>
-					<td><a class="btn btn-danger btn-xs"  th:href="@{/eliminar/}+${cliente.id}" onclick="return confirm('¿estas seguro de eliminar este registro?')" >eliminar</a></td>
-				</tr>
-			</tbody>
-		</table>
+			<div class="card-header" th:text="${titulo}" ></div>
+
+			<div class="card-body">
+
+			<div class="card-title">
+				<a th:href="@{/form}" class="btn btn-primary" > crear cliente </a>
+			</div>
+
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>Id</th>
+							<th>Nombre</th>
+							<th>Apellido</th>
+							<th>Email</th>
+							<th>Fecha</th>
+							<th>Editar</th>
+							<th>Eliminar</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="cliente: ${clientes}">
+							<td th:text="${cliente.id}"></td>
+							<td th:text="${cliente.nombre}"></td>
+							<td th:text="${cliente.apellido}"></td>
+							<td th:text="${cliente.email}"></td>
+							<td th:text="${cliente.createAt}"></td>
+							<td><a class="btn btn-primary btn-xs"
+								th:href="@{/form/}+${cliente.id}">editar</a></td>
+							<td><a class="btn btn-danger btn-xs"
+								th:href="@{/eliminar/}+${cliente.id}"
+								onclick="return confirm('¿estas seguro de eliminar este registro?')">eliminar</a></td>
+						</tr>
+					</tbody>
+				</table>
+
+			</div>
+		</div>
 	</div>
+
+	<footer th:replace="layout/layout :: footer"></footer>
+
 </body>
 </html>
