--- a/jpa/spring-boot-jpa-/src/main/resources/templates/layout/layout.html
+++ b/jpa/spring-boot-jpa-/src/main/resources/templates/layout/layout.html
@@ -50,6 +50,12 @@ li a:hover {
 			<li><a>C</a></li>
 			<li><a href="#about">A</a></li>
 		</ul>
+		
+		<div class="alert alert-success" th:if="${success != null}" th:text="${success}" ></div>
+		<div class="alert alert-danger" th:if="${error != null }" th:text="${error}" ></div>
+		<div class="alert alert-warning" th:if="${warning != null}" th:text="${warning}" ></div>
+		<div class="alert alert-info" th:if="${info != null}" th:text="${info}" ></div>
+		
 	</header>
 
 	<div class="container"></div>
