--- a/jpa/spring-boot-jpa-/src/main/resources/templates/form.html
+++ b/jpa/spring-boot-jpa-/src/main/resources/templates/form.html
@@ -15,7 +15,7 @@
 			</ul>
 		</div>
 
-		<form th:action="@{/form}" th:object="${cliente}" method="post">
+		<form th:action="@{/form}" th:object="${cliente}" method="post" enctype="multipart/form-data" >
 
 			<div class="form-group">
 				<label class="col-sm-2 col-form-label">Nombre</label> <input
@@ -47,6 +47,11 @@
 					th:errorclass="'form-control alert-danger'" /> <small
 					class="form-text text-danger"
 					th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
+			</div>
+
+			<div class="form-group">
+				<label for="file" class="col-sm-2 col-form-label">Foto</label>
+				<input type="file" name="file" class="form-control" /> 
 			</div>
 
 
