--- a/jpa/spring-boot-jpa-/src/main/resources/templates/listar.html
+++ b/jpa/spring-boot-jpa-/src/main/resources/templates/listar.html
@@ -9,13 +9,13 @@
 
 		<div class="card">
 
-			<div class="card-header" th:text="${titulo}" ></div>
+			<div class="card-header" th:text="${titulo}"></div>
 
 			<div class="card-body">
 
-			<div class="card-title">
-				<a th:href="@{/form}" class="btn btn-primary" > crear cliente </a>
-			</div>
+				<div class="card-title">
+					<a th:href="@{/form}" class="btn btn-primary"> crear cliente </a>
+				</div>
 
 				<table class="table table-striped">
 					<thead>
@@ -31,7 +31,9 @@
 					</thead>
 					<tbody>
 						<tr th:each="cliente: ${clientes}">
-							<td th:text="${cliente.id}"></td>
+							<td><a class="btn btn-primary btn-xs"
+								th:href="@{/ver/} + ${cliente.id}" th:text="${cliente.id}"></a>
+							</td>
 							<td th:text="${cliente.nombre}"></td>
 							<td th:text="${cliente.apellido}"></td>
 							<td th:text="${cliente.email}"></td>
@@ -44,8 +46,8 @@
 						</tr>
 					</tbody>
 				</table>
-				
-				
+
+
 			</div>
 		</div>
 	</div>
